# synthext

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Doxyfile  Justfile  README.md
.github/workflows/: doxygen-pdf.yml
apps/: CMakeLists.txt  app.cpp  controls.cpp  controls.hpp  playback.hpp  ui.cpp  ui.hpp  usage_guide.hpp  usage_guide.txt
assets/: how_to_use.txt  output.mid
docs/org/: spec.org
docs/tests/: Teste_1.txt  Untitled
docs/uml/: classes.plantuml  components.plantuml  usecase.puml
include/: text.hpp
include/synthlib/: bpm.hpp  bpm_manager.hpp  command.hpp  compiler.hpp  generator.hpp  instrument.hpp  mapper.hpp  midi.hpp  midi_creator.hpp  note.hpp  octave.hpp  player.hpp  primitives.hpp  synth.hpp  text.hpp  voice.hpp  voice_manager.hpp  volume.hpp
src/: CMakeLists.txt  bpm.cpp  bpm_manager.cpp  command.cpp  compiler.cpp  generator.cpp  main.cpp  mapper.cpp  midi.cpp  midi_creator.cpp  player.cpp  scanner.l  text.cpp  voice.cpp  voice_manager.cpp
synthlib/: CMakeLists.txt
synthlib/include/synthlib/: bpm_manager.hpp  command.hpp  compiler.hpp  event_consumer.hpp  instrument.hpp  midi_creator.hpp  midi_file_writer.hpp  mock_event_consumer.hpp  player.hpp  primitives.hpp  voice_manager.hpp
synthlib/src/: bpm_manager.cpp  command.cpp  compiler.cpp  instrument.cpp  midi_creator.cpp  midi_file_writer.cpp  player.cpp  voice_manager.cpp
tests/: CMakeLists.txt  mapper.cpp
